--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
     /* Banner */
     .banner{position:relative; border-radius:22px; overflow:hidden; border:1px solid var(--stroke); background:linear-gradient(180deg, #131845, #0a0f2d);}    
-    .banner-img{width:100%; height:min(34vw,320px); object-fit:cover; display:block; filter:saturate(1.2) contrast(1.05)}
+    .banner-img{width:100%; height:min(34vw,320px); object-fit:cover; display:block; filter:saturate(1.2) contrast(1.05); background:#0a0f2d}
     .banner-glow{position:absolute; inset:0; background: radial-gradient(700px 200px at 20% 0%, var(--cyan)11, transparent 70%), radial-gradient(700px 200px at 80% 0%, var(--pink)11, transparent 70%);}    
 
-    header.profile{display:grid; grid-template-columns:110px 1fr auto; gap:18px; align-items:end; padding:16px 18px 22px; margin-top:-70px}
+    header.profile{display:grid; grid-template-columns:110px 1fr auto; gap:18px; align-items:end; padding:16px 0 0; margin-top:12px}
     @media (max-width:720px){header.profile{grid-template-columns:80px 1fr; grid-template-areas:"av name" "act act"; gap:12px}}
     .avatar{grid-area:av; width:110px; height:110px; border-radius:22px; border:2px solid var(--stroke); background:#111 url('avatar.jpg') center/cover no-repeat; box-shadow:0 10px 30px #0003}
     h1{margin:0; font-size:clamp(24px,3.2vw,38px); letter-spacing:.2px}
@@ -99,36 +99,36 @@
 <body>
   <noscript>This site requires JavaScript to run the tabs and theme toggle.</noscript>
   <div class="stars"></div><div class="stars2"></div><div class="stars3"></div>
-  <div class="wrap">
-
-    <!-- Banner (Hero Image #1) -->
+  <div class="wrap">    <!-- Banner (Hero Image #1) -->
     <div class="banner" role="img" aria-label="Galaxy banner image">
       <img src="banner.jpg" alt="Galaxy banner" class="banner-img" />
       <div class="banner-glow"></div>
-      <header class="profile">
-        <div class="avatar" title="Profile photo (Hero Image #2)"></div>
-        <div>
-          <h1>Mahya Hamedi</h1>
-          <p class="subtitle">Digital Product Manager (DTC Genetics) & AI‑in‑Health Researcher</p>
-          <div class="chips">
-            <span class="chip">AI · ML · LLMs · RAG</span>
-            <span class="chip">Digital Health · Precision Medicine</span>
-            <span class="chip">UX · Product Strategy</span>
-          </div>
-        </div>
-        <div class="actions">
-          <a class="btn primary" href="mailto:mahyahamedi98@gmail.com">Email</a>
-          <a class="btn" href="https://www.linkedin.com/in/mahya-hamedi-2477641bb/overlay/about-this-profile/" target="_blank" rel="noopener">LinkedIn</a>
-          <a class="btn" href="https://github.com/your-username" target="_blank" rel="noopener">GitHub</a>
-          <a class="btn" href="resume.pdf" download>Download CV (PDF)</a>
-          <div class="mode" aria-label="Theme toggle">
-            <span>☀️</span>
-            <div class="switch" id="themeSwitch" role="button" aria-pressed="false" tabindex="0"><div class="knob"></div></div>
-            <span>🌙</span>
-          </div>
-        </div>
-      </header>
     </div>
+
+    <!-- Profile header (moved outside banner to avoid overlap glitches) -->
+    <header class="profile">
+      <div class="avatar" title="Profile photo (Hero Image #2)"></div>
+      <div>
+        <h1>Mahya Hamedi</h1>
+        <p class="subtitle">Digital Product Manager (DTC Genetics) & AI‑in‑Health Researcher</p>
+        <div class="chips">
+          <span class="chip">AI · ML · LLMs · RAG</span>
+          <span class="chip">Digital Health · Precision Medicine</span>
+          <span class="chip">UX · Product Strategy</span>
+        </div>
+      </div>
+      <div class="actions">
+        <a class="btn primary" href="mailto:mahyahamedi98@gmail.com">Email</a>
+        <a class="btn" href="https://www.linkedin.com/in/mahya-hamedi-2477641bb/overlay/about-this-profile/" target="_blank" rel="noopener">LinkedIn</a>
+        <a class="btn" href="https://github.com/your-username" target="_blank" rel="noopener">GitHub</a>
+        <a class="btn" href="resume.pdf" download>Download CV (PDF)</a>
+        <div class="mode" aria-label="Theme toggle">
+          <span>☀️</span>
+          <div class="switch" id="themeSwitch" role="button" aria-pressed="false" tabindex="0"><div class="knob"></div></div>
+          <span>🌙</span>
+        </div>
+      </div>
+    </header>
 
     <!-- TABBED CONTENT -->
     <div class="tabs" id="tabs">
