--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     .banner-img{width:100%; height:min(45vw,450px); object-fit:cover; display:block; filter:saturate(1.2) contrast(1.05); background:#0a0f2d}
     .banner-glow{position:absolute; inset:0; background: radial-gradient(700px 200px at 20% 0%, var(--cyan)11, transparent 70%), radial-gradient(700px 200px at 80% 0%, var(--pink)11, transparent 70%);}    
 
-    header.profile{display:grid; grid-template-columns:110px 1fr auto; gap:18px; align-items:end; padding:16px 0 0; margin-top:12px}
+    header.profile{display:grid; grid-template-columns:110px 1fr auto; gap:18px; align-items:end; padding:16px 0 0; margin-top: -60px;}
     @media (max-width:720px){header.profile{grid-template-columns:80px 1fr; grid-template-areas:"av name" "act act"; gap:12px}}
     .avatar{grid-area:av; width:110px; height:110px; border-radius:22px; border:2px solid var(--stroke); background:#111 url('avatar.jpg') center/cover no-repeat; box-shadow:0 10px 30px #0003}
     h1{margin:0; font-size:clamp(24px,3.2vw,38px); letter-spacing:.2px}
