--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mahya Hamedi — Portfolio & Resume</title>
+  <title>Mahya-Hamedi — Portfolio & Resume</title>
   <meta name="description" content="Digital Product Manager & AI‑in‑Health Researcher" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
