--- a/index.html
+++ b/index.html
@@ -1476,6 +1476,18 @@
           </div>
 
           <article class="publication-item">
+            <h3 class="publication-title">Healthcare Dashboards: An Umbrella Review of Applications,
+                Benefits, Design and Challenges</h3>
+            <p class="publication-meta">Digital Health Journal, under review, 2025</p>
+          </article>
+
+          <article class="publication-item">
+            <h3 class="publication-title">Design and Evaluation of Gamification Approaches in a Personalized Health Mobile
+                Application for Lifestyle Optimization</h3>
+            <p class="publication-meta">In progress, 2025</p>
+          </article>
+
+          <article class="publication-item">
             <h3 class="publication-title">Application of machine learning in breast cancer survival prediction using a multimethod approach</h3>
             <p class="publication-meta">Scientific Reports (Nature), 2024</p>
             <a href="https://doi.org/10.1038/s41598-024-81734-y" target="_blank" rel="noopener" class="publication-link">
@@ -1498,17 +1510,7 @@
             </a>
           </article>
 
-          <article class="publication-item">
-            <h3 class="publication-title">Healthcare Dashboards: An Umbrella Review of Applications,
-                Benefits, Design and Challenges</h3>
-            <p class="publication-meta">Digital Health Journal, under review, 2025</p>
-          </article>
 
-          <article class="publication-item">
-            <h3 class="publication-title">Design and Evaluation of Gamification Approaches in a Personalized Health Mobile
-                Application for Lifestyle Optimization</h3>
-            <p class="publication-meta">In progress, 2025</p>
-          </article>
         </div>
 
         <div class="tab-panel" id="panel-courses" role="tabpanel" aria-labelledby="tab-courses">
@@ -1570,8 +1572,8 @@
             <article class="publication-item">
               <h3 class="publication-title">🧬 Bioinformatics Summer School</h3>
               <p class="publication-meta">Shiraz University of Medical Sciences, 2019</p>
-              <a href="" target="_blank" rel="noopener" class="publication-link">
-                View Certificate
+              <a href="https://drive.google.com/file/d/1yGVxfHDWDdCa-vzxV3Q7Q9BV_kuhcZrJ/view" target="_blank" rel="noopener" class="publication-link">
+                  View Certificate
               </a>
             </article>
           </div>
