--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,9 @@
             <a href="https://www.linkedin.com/in/mahya-hamedi-2477641bb/overlay/about-this-profile/" target="_blank" rel="noopener" class="action-btn action-btn-secondary">💼 LinkedIn</a>
             <a href="resume.pdf" download class="action-btn action-btn-secondary">📄 Download CV</a>
             
-            <div class="theme-toggle-wrapper" id="themeToggle" role="button" aria-label="Toggle dark mode" tabindex="0">
+            <div class="theme-toggle-wrapper" id="themeToggle" role="button" aria-label="Toggle dark mode" tabindex="0" aria-pressed="true" style="
+    justify-content: center;
+">
               <span>☀️</span>
               <div class="theme-toggle">
                 <div class="theme-toggle-knob"></div>
