--- a/index.html
+++ b/index.html
@@ -1024,6 +1024,8 @@
       }
 
       .tabs-nav {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
         padding: 12px;
         gap: 6px;
       }
