--- a/index.html
+++ b/index.html
@@ -1119,10 +1119,12 @@
             </div>
           </div>
 
-          <div class="profile-actions">
+          <div class="profile-actions" style="
+    justify-content: center;
+">
             <a href="mailto:mahyahamedi98@gmail.com" class="action-btn action-btn-primary">📧 Email Me</a>
             <a href="https://www.linkedin.com/in/mahya-hamedi-2477641bb/overlay/about-this-profile/" target="_blank" rel="noopener" class="action-btn action-btn-secondary">💼 LinkedIn</a>
-            <a href="resume.pdf" download class="action-btn action-btn-secondary">📄 Download CV</a>
+            <a href="resume.pdf" download="" class="action-btn action-btn-secondary">📄 Download CV</a>
             
             <div class="theme-toggle-wrapper" id="themeToggle" role="button" aria-label="Toggle dark mode" tabindex="0" aria-pressed="true" style="
     justify-content: center;
