--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,9 @@
             <div class="panel-accent"></div>
           </div>
           <div class="summary-content">
-            <p>
+            <p style="
+    text-align: justify;
+">
                 A Medical Informatics researcher and Digital Product Manager bridging the gap between scientific discovery and user-centered health technology. I specialize in building AI-powered products, platforms, and mobile apps that translate complex genomic and clinical data into actionable, personalized insights. With a background in developing machine learning models for cancer survival prediction and hands-on experience deploying LLMs and RAG systems in a commercial setting, I thrive on turning evidence-based research into intuitive applications that empower users and improve health outcomes.
             </p>
           </div>
