--- a/index.html
+++ b/index.html
@@ -1280,7 +1280,9 @@
             <article class="card">
               <div class="card-icon">📋</div>
               <h3 class="card-title">Personalized Medicine National Document</h3>
-              <p class="card-description">
+              <p class="card-description" style="
+    text-align: justify;
+">
                 Member of a multidisciplinary group of writers. The goal of this document was to provide guidance for enhancing Personalized Medicine in Iran by drawing inspiration from successful cases around the world.
               </p>
             </article>
@@ -1288,7 +1290,9 @@
             <article class="card">
               <div class="card-icon">🏥</div>
               <h3 class="card-title">CF Self‑Care App & Specialized EHR</h3>
-              <p class="card-description">
+              <p class="card-description" style="
+    text-align: justify;
+">
                 Managing the development of a self-care application for cystic fibrosis patients and a specialized EHR system for CF healthcare centers in Iran, under the supervision of the Iran CF Foundation.
               </p>
             </article>
@@ -1296,7 +1300,9 @@
             <article class="card">
               <div class="card-icon">📊</div>
               <h3 class="card-title">Digital Health Literacy Initiative</h3>
-              <p class="card-description">
+              <p class="card-description" style="
+    text-align: justify;
+">
                 Participated with the Digital Health Committee at the Academy of Medical Sciences in creating an infographic document on elevating digital health literacy.
               </p>
             </article>
@@ -1304,7 +1310,9 @@
             <article class="card">
               <div class="card-icon">🖥️</div>
               <h3 class="card-title">Psychology-Based HR Platform</h3>
-              <p class="card-description">
+              <p class="card-description" style="
+    text-align: justify;
+">
                 Managing the design and development of a human resource management platform based on psychological tests that were used by a psychiatric resident in his thesis.
               </p>
             </article>
@@ -1322,7 +1330,7 @@
             <article class="card">
               <div class="card-icon">📋</div>
               <h3 class="card-title">Personalized Medicine National Document — Contributor</h3>
-              <p class="card-description">
+              
                 Co‑authored guidance to enhance Personalized Medicine in Iran, inspired by global best practices.
               </p>
             </article>
