--- a/index.html
+++ b/index.html
@@ -1415,18 +1415,7 @@
           </div>
 
           <div class="card-grid">
-            <article class="card">
-              <div class="card-icon">🤖</div>
-              <h3 class="card-title">Core Technologies</h3>
-              <div class="skill-tags">
-                <span class="skill-tag">AI</span>
-                <span class="skill-tag">Machine Learning</span>
-                <span class="skill-tag">LLMs</span>
-                <span class="skill-tag">Precision Medicine</span>
-                <span class="skill-tag">IoT</span>
-                <span class="skill-tag">Gamification</span>
-              </div>
-            </article>
+           
 
             <article class="card">
               <div class="card-icon">🎨</div>
@@ -1445,15 +1434,15 @@
               <h3 class="card-title">Technical Skills</h3>
               <div class="skill-tags">
                 <span class="skill-tag">Python</span>
-                <span class="skill-tag">TensorFlow</span>
-                <span class="skill-tag">scikit‑learn</span>
+                <span class="skill-tag">ML Modeling</span>
+                
                 <span class="skill-tag">Streamlit</span>
-                <span class="skill-tag">Tesseract/PaddleOCR</span>
+                <span class="skill-tag">Software Testing</span>
                 <span class="skill-tag">MySQL</span>
                 <span class="skill-tag">HTML/CSS</span>
                 <span class="skill-tag">Postman</span>
                 <span class="skill-tag">AI Agent Dev</span>
-                <span class="skill-tag">RAG</span>
+                <span class="skill-tag">Fine Tuning and RAG</span>
               </div>
             </article>
 
