--- a/index.html
+++ b/index.html
@@ -1169,6 +1169,10 @@
 ">
                 A Medical Informatics researcher and Digital Product Manager bridging the gap between scientific discovery and user-centered health technology. I specialize in building AI-powered products, platforms, and mobile apps that translate complex genomic and clinical data into actionable, personalized insights. With a background in developing machine learning models for cancer survival prediction and hands-on experience deploying LLMs and RAG systems in a commercial setting, I thrive on turning evidence-based research into intuitive applications that empower users and improve health outcomes.
             </p>
+            <ul>
+    <li><strong>Innovation:</strong> AI, Machine learning, Precision Medicine, LLMs, eHealth, IoT, Gamification</li>
+    <li><strong>Design and Evaluation:</strong> Digital Health Product Design, Strategic Management</li>
+</ul>
           </div>
         </div>
 
