--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@
             </p>
             <h3>Interests</h3>
             <ul>
-    <li><strong>Innovation:</strong> AI, Machine learning, Precision Medicine, LLMs, eHealth, IoT, Gamification</li>
+    <li><strong>Innovation:</strong> AI, Machine learning, Precision Medicine, Mental Health, LLMs, eHealth, IoT, Gamification</li>
     <li><strong>Design and Evaluation:</strong> Digital Health Product Design, Strategic Management</li>
 </ul>
           </div>
